--- a/app/src/main/res/layout/content_college_app.xml
+++ b/app/src/main/res/layout/content_college_app.xml
@@ -8,7 +8,7 @@
     tools:context=".CollegeAppActivity"
     tools:showIn="@layout/app_bar_college_app">
 
-    <TextView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/content_frame"/>
